Parser/cool.output
Terminals unused in grammar

   ERROR


State 22 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error

    7 feature_list: /* empty */
    8             | feature_list feature

    9 feature: OBJECTID '(' ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID '(' formal formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID ':' TYPEID ';'
   12        | OBJECTID ':' TYPEID ASSIGN expr ';'
   13        | OBJECTID ':' error ';'
   14        | OBJECTID '(' formal formal_list ')' ':' TYPEID '{' error '}' ';'
   15        | OBJECTID '(' ')' ':' TYPEID '{' error '}' ';'
   16        | OBJECTID '(' error ')' ':' TYPEID '{' expr '}' ';'
   17        | OBJECTID '(' error formal_list ')' ':' TYPEID '{' expr '}' ';'

   18 formal_list: /* empty */
   19            | formal_list ',' formal
   20            | formal_list ',' error

   21 formal: OBJECTID ':' TYPEID

   22 expr: BOOL_CONST
   23     | STR_CONST
   24     | INT_CONST
   25     | OBJECTID
   26     | '(' expr ')'
   27     | NOT expr
   28     | expr '=' expr
   29     | expr LE expr
   30     | expr '<' expr
   31     | '~' expr
   32     | expr '/' expr
   33     | expr '*' expr
   34     | expr '-' expr
   35     | expr '+' expr
   36     | ISVOID expr
   37     | NEW TYPEID
   38     | WHILE expr LOOP expr POOL
   39     | IF expr THEN expr ELSE expr FI
   40     | OBJECTID ASSIGN expr
   41     | expr '.' OBJECTID '(' ')'
   42     | expr '.' OBJECTID '(' expr expr_list ')'
   43     | expr '@' TYPEID '.' OBJECTID '(' ')'
   44     | expr '@' TYPEID '.' OBJECTID '(' expr expr_list ')'
   45     | OBJECTID '(' ')'
   46     | OBJECTID '(' expr expr_list ')'
   47     | '{' expr ';' brace_expr_list '}'
   48     | CASE expr OF case_expr case_expr_list ESAC
   49     | LET let_expr
   50     | '{' error ';' brace_expr_list '}'

   51 expr_list: /* empty */
   52          | expr_list ',' expr

   53 brace_expr_list: /* empty */
   54                | brace_expr_list expr ';'

   55 case_expr: OBJECTID ':' TYPEID DARROW expr ';'

   56 case_expr_list: /* empty */
   57               | case_expr_list case_expr

   58 let_expr: OBJECTID ':' TYPEID IN expr
   59         | OBJECTID ':' TYPEID ',' let_expr
   60         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   61         | OBJECTID ':' TYPEID ASSIGN expr ',' let_expr
   62         | OBJECTID error IN expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 10 14 15 16 17 26 41 42 43 44 45 46
')' (41) 9 10 14 15 16 17 26 41 42 43 44 45 46
'*' (42) 33
'+' (43) 35
',' (44) 19 20 52 59 61
'-' (45) 34
'.' (46) 41 42 43 44
'/' (47) 32
':' (58) 9 10 11 12 13 14 15 16 17 21 55 58 59 60 61
';' (59) 4 5 9 10 11 12 13 14 15 16 17 47 50 54 55
'<' (60) 30
'=' (61) 28
'@' (64) 43 44
'{' (123) 4 5 9 10 14 15 16 17 47 50
'}' (125) 4 5 9 10 14 15 16 17 47 50
'~' (126) 31
error (256) 6 13 14 15 16 17 20 50 62
CLASS (258) 4 5
ELSE (259) 39
FI (260) 39
IF (261) 39
IN (262) 58 60 62
INHERITS (263) 5
LET (264) 49
LOOP (265) 38
POOL (266) 38
THEN (267) 39
WHILE (268) 38
CASE (269) 48
ESAC (270) 48
OF (271) 48
DARROW (272) 55
NEW (273) 37
ISVOID (274) 36
STR_CONST (275) 23
INT_CONST (276) 24
BOOL_CONST (277) 22
TYPEID (278) 4 5 9 10 11 12 14 15 16 17 21 37 43 44 55 58 59 60 61
OBJECTID (279) 9 10 11 12 13 14 15 16 17 21 25 40 41 42 43 44 45 46
    55 58 59 60 61 62
ASSIGN (280) 12 40 60 61
NOT (281) 27
LE (282) 29
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
feature_list (49)
    on left: 7 8, on right: 4 5 8
feature (50)
    on left: 9 10 11 12 13 14 15 16 17, on right: 8
formal_list (51)
    on left: 18 19 20, on right: 10 14 17 19 20
formal (52)
    on left: 21, on right: 10 14 19
expr (53)
    on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39
    40 41 42 43 44 45 46 47 48 49 50, on right: 9 10 12 16 17 26 27
    28 29 30 31 32 33 34 35 36 38 39 40 41 42 43 44 46 47 48 52 54
    55 58 60 61 62
expr_list (54)
    on left: 51 52, on right: 42 44 46 52
brace_expr_list (55)
    on left: 53 54, on right: 47 50 54
case_expr (56)
    on left: 55, on right: 48 57
case_expr_list (57)
    on left: 56 57, on right: 48 57
let_expr (58)
    on left: 58 59 60 61 62, on right: 49 59 61


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    6 class: error .

    $default  reduce using rule 6 (class)


state 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 6


state 3

    0 $accept: program . $end

    $end  shift, and go to state 7


state 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 8


state 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 6

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


state 7

    0 $accept: program $end .

    $default  accept


state 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 9

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 11


state 10

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 12


state 11

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 13


state 12

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 15

    feature  go to state 16


state 13

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 17


state 14

    9 feature: OBJECTID . '(' ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID . '(' formal formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID . ':' TYPEID ';'
   12        | OBJECTID . ':' TYPEID ASSIGN expr ';'
   13        | OBJECTID . ':' error ';'
   14        | OBJECTID . '(' formal formal_list ')' ':' TYPEID '{' error '}' ';'
   15        | OBJECTID . '(' ')' ':' TYPEID '{' error '}' ';'
   16        | OBJECTID . '(' error ')' ':' TYPEID '{' expr '}' ';'
   17        | OBJECTID . '(' error formal_list ')' ':' TYPEID '{' expr '}' ';'

    '('  shift, and go to state 18
    ':'  shift, and go to state 19


state 15

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 20


state 16

    8 feature_list: feature_list feature .

    $default  reduce using rule 8 (feature_list)


state 17

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 21

    feature  go to state 16


state 18

    9 feature: OBJECTID '(' . ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID '(' . formal formal_list ')' ':' TYPEID '{' expr '}' ';'
   14        | OBJECTID '(' . formal formal_list ')' ':' TYPEID '{' error '}' ';'
   15        | OBJECTID '(' . ')' ':' TYPEID '{' error '}' ';'
   16        | OBJECTID '(' . error ')' ':' TYPEID '{' expr '}' ';'
   17        | OBJECTID '(' . error formal_list ')' ':' TYPEID '{' expr '}' ';'

    error     shift, and go to state 22
    OBJECTID  shift, and go to state 23
    ')'       shift, and go to state 24

    formal  go to state 25


state 19

   11 feature: OBJECTID ':' . TYPEID ';'
   12        | OBJECTID ':' . TYPEID ASSIGN expr ';'
   13        | OBJECTID ':' . error ';'

    error   shift, and go to state 26
    TYPEID  shift, and go to state 27


state 20

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


state 21

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 28


state 22

   16 feature: OBJECTID '(' error . ')' ':' TYPEID '{' expr '}' ';'
   17        | OBJECTID '(' error . formal_list ')' ':' TYPEID '{' expr '}' ';'

    ')'  shift, and go to state 29

    ')'       [reduce using rule 18 (formal_list)]
    $default  reduce using rule 18 (formal_list)

    formal_list  go to state 30


state 23

   21 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 31


state 24

    9 feature: OBJECTID '(' ')' . ':' TYPEID '{' expr '}' ';'
   15        | OBJECTID '(' ')' . ':' TYPEID '{' error '}' ';'

    ':'  shift, and go to state 32


state 25

   10 feature: OBJECTID '(' formal . formal_list ')' ':' TYPEID '{' expr '}' ';'
   14        | OBJECTID '(' formal . formal_list ')' ':' TYPEID '{' error '}' ';'

    $default  reduce using rule 18 (formal_list)

    formal_list  go to state 33


state 26

   13 feature: OBJECTID ':' error . ';'

    ';'  shift, and go to state 34


state 27

   11 feature: OBJECTID ':' TYPEID . ';'
   12        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 35
    ';'     shift, and go to state 36


state 28

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 29

   16 feature: OBJECTID '(' error ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 37


state 30

   17 feature: OBJECTID '(' error formal_list . ')' ':' TYPEID '{' expr '}' ';'
   19 formal_list: formal_list . ',' formal
   20            | formal_list . ',' error

    ')'  shift, and go to state 38
    ','  shift, and go to state 39


state 31

   21 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 40


state 32

    9 feature: OBJECTID '(' ')' ':' . TYPEID '{' expr '}' ';'
   15        | OBJECTID '(' ')' ':' . TYPEID '{' error '}' ';'

    TYPEID  shift, and go to state 41


state 33

   10 feature: OBJECTID '(' formal formal_list . ')' ':' TYPEID '{' expr '}' ';'
   14        | OBJECTID '(' formal formal_list . ')' ':' TYPEID '{' error '}' ';'
   19 formal_list: formal_list . ',' formal
   20            | formal_list . ',' error

    ')'  shift, and go to state 42
    ','  shift, and go to state 39


state 34

   13 feature: OBJECTID ':' error ';' .

    $default  reduce using rule 13 (feature)


state 35

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 57


state 36

   11 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 11 (feature)


state 37

   16 feature: OBJECTID '(' error ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 58


state 38

   17 feature: OBJECTID '(' error formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 59


state 39

   19 formal_list: formal_list ',' . formal
   20            | formal_list ',' . error

    error     shift, and go to state 60
    OBJECTID  shift, and go to state 23

    formal  go to state 61


state 40

   21 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 21 (formal)


state 41

    9 feature: OBJECTID '(' ')' ':' TYPEID . '{' expr '}' ';'
   15        | OBJECTID '(' ')' ':' TYPEID . '{' error '}' ';'

    '{'  shift, and go to state 62


state 42

   10 feature: OBJECTID '(' formal formal_list ')' . ':' TYPEID '{' expr '}' ';'
   14        | OBJECTID '(' formal formal_list ')' . ':' TYPEID '{' error '}' ';'

    ':'  shift, and go to state 63


state 43

   39 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 64


state 44

   49 expr: LET . let_expr

    OBJECTID  shift, and go to state 65

    let_expr  go to state 66


state 45

   38 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 67


state 46

   48 expr: CASE . expr OF case_expr case_expr_list ESAC

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 68


state 47

   37 expr: NEW . TYPEID

    TYPEID  shift, and go to state 69


state 48

   36 expr: ISVOID . expr

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 70


state 49

   23 expr: STR_CONST .

    $default  reduce using rule 23 (expr)


state 50

   24 expr: INT_CONST .

    $default  reduce using rule 24 (expr)


state 51

   22 expr: BOOL_CONST .

    $default  reduce using rule 22 (expr)


state 52

   25 expr: OBJECTID .
   40     | OBJECTID . ASSIGN expr
   45     | OBJECTID . '(' ')'
   46     | OBJECTID . '(' expr expr_list ')'

    ASSIGN  shift, and go to state 71
    '('     shift, and go to state 72

    $default  reduce using rule 25 (expr)


state 53

   27 expr: NOT . expr

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 73


state 54

   31 expr: '~' . expr

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 74


state 55

   47 expr: '{' . expr ';' brace_expr_list '}'
   50     | '{' . error ';' brace_expr_list '}'

    error       shift, and go to state 75
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 76


state 56

   26 expr: '(' . expr ')'

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 77


state 57

   12 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   28 expr: expr . '=' expr
   29     | expr . LE expr
   30     | expr . '<' expr
   32     | expr . '/' expr
   33     | expr . '*' expr
   34     | expr . '-' expr
   35     | expr . '+' expr
   41     | expr . '.' OBJECTID '(' ')'
   42     | expr . '.' OBJECTID '(' expr expr_list ')'
   43     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   44     | expr . '@' TYPEID '.' OBJECTID '(' expr expr_list ')'

    LE   shift, and go to state 78
    '<'  shift, and go to state 79
    '='  shift, and go to state 80
    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '@'  shift, and go to state 85
    '.'  shift, and go to state 86
    ';'  shift, and go to state 87


state 58

   16 feature: OBJECTID '(' error ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 88


state 59

   17 feature: OBJECTID '(' error formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 89


state 60

   20 formal_list: formal_list ',' error .

    $default  reduce using rule 20 (formal_list)


state 61

   19 formal_list: formal_list ',' formal .

    $default  reduce using rule 19 (formal_list)


state 62

    9 feature: OBJECTID '(' ')' ':' TYPEID '{' . expr '}' ';'
   15        | OBJECTID '(' ')' ':' TYPEID '{' . error '}' ';'

    error       shift, and go to state 90
    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expr  go to state 91


state 63

   10 feature: OBJECTID '(' formal formal_list ')' ':' . TYPEID '{' expr '}' ';'
   14        | OBJECTID '(' formal formal_list ')' ':' . TYPEID '{' error '}' ';'

    TYPEID  shift, and go to state 92


state 64
